--- a/package.json
+++ b/package.json
@@ -73,11 +73,14 @@
   },
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.3",
+    "@angular/animations": "13.1.3",
+    "@angular/cdk": "^13.2.2",
     "@angular/common": "13.1.3",
     "@angular/compiler": "13.1.3",
     "@angular/core": "13.1.3",
     "@angular/forms": "13.1.3",
     "@angular/localize": "13.1.3",
+    "@angular/material": "^13.2.2",
     "@angular/platform-browser": "13.1.3",
     "@angular/platform-browser-dynamic": "13.1.3",
     "@angular/router": "13.1.3",
@@ -87,6 +90,7 @@
     "@ng-bootstrap/ng-bootstrap": "11.0.0",
     "bootstrap": "4.6.1",
     "dayjs": "1.10.7",
+    "ngx-file-drop": "^13.0.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "9.0.0",
     "rxjs": "7.5.2",
