--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "13.0.0",
     "@angular-builders/jest": "13.0.2",
-    "@angular-devkit/build-angular": "13.1.2",
+    "@angular-devkit/build-angular": "^13.3.8",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular/cli": "13.1.2",
     "@angular/compiler-cli": "13.1.3",
@@ -110,14 +110,14 @@
     "@types/node": "16.11.21",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
-    "browser-sync": "2.27.7",
+    "browser-sync": "^2.27.10",
     "browser-sync-webpack-plugin": "2.3.0",
     "concurrently": "7.0.0",
     "copy-webpack-plugin": "10.2.1",
     "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-webpack-plugin": "3.1.1",
-    "generator-jhipster": "7.6.0",
+    "generator-jhipster": "^7.8.1",
     "husky": "7.0.4",
     "jest": "27.4.7",
     "jest-date-mock": "1.0.8",
